# mr-poopybutthole

./: .envrc  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  flake.nix  mr-poopybutthole.py  oohwee.py  pyproject.toml  template.env
k8s/microk8s/: mr-poopybutthole.yaml
mr_poopybutthole/: .env  __init__.py  api.py  command.py  commands.yaml  constants.py  help.py  listener.py  listeners.yaml  oohwee.py  snowflake.py
mr_poopybutthole/config/: commands.yaml  help.yaml  listeners.yaml  snowflakes.yaml
mr_poopybutthole/data/: commands.yaml  help.yaml  listeners.yaml  snowflakes.yaml
tests/: test_mr_poopybutthole.py
