[tool.poetry]
name = "mr-poopybutthole"
version = "0.1.0"
description = "A pointlessly fun Discord bot."
authors = ["Peter Marks <peter.marks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.4.1"
python_dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
